# snap-sandbox

./: .gitignore  CMakeLists.txt  README.md  build_python.sh
snap/: env.sh  snapcraft.yaml
src/: CMakeLists.txt
src/chinese/: setup.py
src/chinese/hello/: hello.py
src/cpp/: CMakeLists.txt  caller.cpp
src/culebra/: CMakeLists.txt  prepend_sitepackages.py  setup.py
src/culebra/culebra/: culebra.py  dolores.py
src/english/: setup.py
src/english/hello/: hello.py
src/mylibrary/: setup.py
src/mylibrary/mylib/: colors.py
src/spanish/: setup.py
src/spanish/hello/: hello.py  utils.py
src/veo/: CMakeLists.txt  mas.cpp
