cmake_minimum_required(VERSION 3.0)

add_subdirectory( src )

# copied from talos/CMakeLists.txt
GET_FILENAME_COMPONENT(PROJ_BIN_DIR "${CMAKE_SOURCE_DIR}/bin"  ABSOLUTE )
GET_FILENAME_COMPONENT(PROJ_LIB_DIR "${CMAKE_SOURCE_DIR}/lib"  ABSOLUTE )

SET( LIBRARY_OUTPUT_PATH      "${PROJ_LIB_DIR}" CACHE PATH "" )
SET( ARCHIVE_OUTPUT_DIRECTORY "${PROJ_LIB_DIR}" CACHE PATH "" )
SET( LIBRARY_OUTPUT_DIRECTORY "${PROJ_LIB_DIR}" CACHE PATH "" )

SET( EXECUTABLE_OUTPUT_PATH   "${PROJ_BIN_DIR}"  CACHE PATH "" )
SET( RUNTIME_OUTPUT_DIRECTORY "${PROJ_BIN_DIR}"  CACHE PATH "" )
